--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=calender
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dbcalender
+spring.datasource.username=root
+spring.datasource.password=dndk51470963
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
